--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@angular/platform-browser": "^18.0.0",
     "@angular/platform-browser-dynamic": "^18.0.0",
     "@angular/router": "^18.0.0",
+    "bootstrap": "^5.3.5",
     "rxjs": "~7.8.0",
+    "todo-service-app": "file:",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
